--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,22 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Oswald:wght@200..700&display=swap');
+
+
 /* Asterisk wildcard selector to override default styles added by the browser*/
 *{
   padding:0;
   margin:0;  
   box-sizing:border-box;
 }
-/*General Styles*/
 
+/*General Styles*/
 body{
     min-height:100vh;
     display:flex;
     flex-direction: column ;
     /*Generic project styles*/
     color:#3a3a3a;
+    font-family:'Lato', sans-serif;
 
 }
 
