--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ header {
     background-color: lightcoral;
 }
 
+/* Heading Size 1 */
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /*Main*/
 main {
     background-color: lightblue;
