--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,17 @@ header {
     
 }
 
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* Heading Size 1 */
 h1 {
     font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
 /*Main*/
